--- a/styles/journal.css
+++ b/styles/journal.css
@@ -40,7 +40,7 @@ header h1 {
     flex: 1 300px;
 }
 
-fieldset {
+#form-fieldset {
     display: flex;
     flex-direction: column;
 }
@@ -80,4 +80,11 @@ h2 {
     background-color: white;
     padding: 0rem 2rem 2rem 2rem;
     flex: 1 300px;
+}
+
+#mood-div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
