--- a/styles/journal.css
+++ b/styles/journal.css
@@ -27,6 +27,7 @@ header h1 {
 .main-container {
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
 }
 
 /* main code for form container */
@@ -37,7 +38,7 @@ header h1 {
     flex-direction: column;
     justify-content: center;
     padding: 0rem 2rem 2rem 2rem;
-    flex: 1 300px;
+    width: 50%;
 }
 
 #form-fieldset {
@@ -79,7 +80,8 @@ h2 {
     margin: 2em;
     background-color: white;
     padding: 0rem 2rem 2rem 2rem;
-    flex: 1 300px;
+    display: flex;
+    flex-flow: row wrap
 }
 
 #mood-div {
@@ -87,4 +89,10 @@ h2 {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+.journal-entry {
+    margin: 2em;
+    border: 1px solid black;
+    padding: 2em;
 }
