--- a/styles/journal.css
+++ b/styles/journal.css
@@ -35,10 +35,9 @@ header h1 {
     margin: 2em;
     background-color: white;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     padding: 0rem 2rem 2rem 2rem;
-    width: 50%;
+    width: 80%;
 }
 
 #form-fieldset {
@@ -74,25 +73,52 @@ h2 {
     margin-bottom: 2em;
 }
 
+#form {
+    width: 40%;
+}
+
+#userInput-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 
 /* main code for journal entry container */
 .entry-container {
     margin: 2em;
-    background-color: white;
     padding: 0rem 2rem 2rem 2rem;
     display: flex;
-    flex-flow: row wrap
+    flex-flow: row wrap;
+    justify-content: center;
 }
 
-#mood-div {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+#mood-div p {
+    color: rgb(241, 205, 3);
+    font-size: 1.5rem;
+}
+
+.moodBox {
+    margin: 1rem;
+}
+
+#search-bar {
+    width: 40%;
+    margin-top: 1em;
+}
+
+#search-bar label {
+    color: rgb(241, 205, 3);
+    font-size: 1.5rem;
 }
 
 .journal-entry {
     margin: 2em;
     border: 1px solid black;
-    padding: 2em;
+    padding: 1em;
+    width: 15rem;
+    background-color: white;
 }
+
